--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
+    "nodemon": "nodemon --watch ./src --watch ./client ./src/server.js",
     "start": "node ./src/server.js",
     "test": "echo \"No Tests\"",
     "pretest": "eslint ./src --fix"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^1.19.2"
   }
 }
